--- a/sample.html
+++ b/sample.html
@@ -50,6 +50,11 @@
     <th>OCCUPATION<p></p></th>
   </tr>
   <tr>
+    <td colspan="2">TYPE OF ACCOMMODATION<p></p></td>
+    <td colspan="2">VACCINATION STAT</td>
+    <td colspan="2">BLOOD TYPE</td>
+  </tr>
+  <tr>
     <td colspan="2">EMPLOYER (Type of Business)<p></p></td>
     <td colspan="2">ADDRESS</td>
     <td colspan="2">TEL NO.</td>
